--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,30 @@
       src: url(fonts/Roboto-Regular.ttf);
     }
 
+    #blogger
+    {
+      margin: -2px;
+    }
+
+    #signature
+    {
+      font-size: 14px;
+      color: gray;
+      text-align: right;
+    }
+
+    #signature a
+    {
+      color: gray;
+      text-decoration: none;
+    }
+
+    #signature a:visited
+    {
+      color: gray;
+      text-decoration: none;
+    }
+
     app-drawer-layout:not([narrow]) [drawer-toggle]
     {
       display: none;
@@ -417,6 +441,9 @@
         <p>Use the green tech list, on the left, to view job charts. 
         To view a chart relating to a single tech just click on the appropriate tech title. 
         To view a chart combining several tech charts use the checkboxes.</p>
+        <p id="signature">- <a href="https://www.linkedin.com/in/esteban-ramirez-91a66b14/">Esteban (Steven) Ramirez</a>
+        <a href="https://www.linkedin.com/in/esteban-ramirez-91a66b14" target="_blank"><img src="/images/In-2C-14px.png" /></a>
+        <a href="http://ramirezsystems.blogspot.com" target="_blank"><img id="blogger" src="/images/icons8-blogger-18.png" /></a></p>
       </div>
 
     </app-header-layout>
