Cache main chart menu

--- a/public/index.html
+++ b/public/index.html
@@ -493,7 +493,7 @@
       </app-header>
 
       <div id="curve_chart">
-        <p>Everybody needs buddies. This one is no exception.</p>
+        <p>Everybody needs good buddies.</p>
         <p>Every day, Trend Buddy takes note of the number of jobs posted demanding experience with various technologies.
         This, in turn, is used to generate comparative charts. 
         If, like me, you're an IT professional you might find this information helpful when determining which skills are worth pursuing. 
