--- a/public/index.html
+++ b/public/index.html
@@ -290,6 +290,7 @@
       Query.Select_Objs(db, Have_Query_Objs);
       function Have_Query_Objs(queries)
       {
+        alert("have data");
         var c, list_elem;
 
         list_elem = document.getElementById("query_items");
