fix chart label margins

--- a/public/index.html
+++ b/public/index.html
@@ -126,12 +126,12 @@
       margin: 0px 50px 25px 50px;
     }
 
-    #curve_chart ul
+    #man_items
     {
       margin: 0px 50px 25px 50px;
     }
 
-    #curve_chart li
+    #man_items li
     {
       margin: 0px 0px 10px 0px;
     }
@@ -598,7 +598,7 @@
         If, like me, you're an IT professional you might find this information helpful when determining which skills are worth pursuing. 
         Each chart, individually, is not overly useful but when combined with others can give us some insight into which technologies are in demand and which are on the way out.</p>
         
-        <ul>
+        <ul id="man_items">
           <li>To view job requests for a single tech just click on the appropriate tech title.</li>
           <li>To compare several tech charts use the checkboxes.</li>
           <li>To compare several techs in a relative way so that each tech point no longer represents the
@@ -608,7 +608,7 @@
 
         <p>Also, Trend Buddy has only been tested on Chrome.</p>
 
-        <p>FYI: Tech used includes VS Code, Javascript, Polymer, Firebase, Google App Engine, Node, and Java.</p>
+        <p>Tech used to build this site includes VS Code, Eclipse, Javascript, Polymer, Firebase, Google App Engine, Node, and Java.</p>
 
         <p id="signature">- <a href="https://www.linkedin.com/in/esteban-ramirez-91a66b14/">Esteban (Steven) Ramirez</a>
         <a href="https://www.linkedin.com/in/esteban-ramirez-91a66b14" target="_blank"><img src="/images/In-2C-14px.png" /></a>
