--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     import '/polymer/app-layout/app-toolbar/app-toolbar.js';
     import '/tb-elements/query-editor.js';
     import '/tb-elements/query-menu-item.js';
+    import '/tb-elements/query-stats.js';
     import '/polymer/paper-toggle-button/paper-toggle-button.js';
     import '/polymer/iron-collapse/iron-collapse.js';
   </script>
@@ -188,6 +189,10 @@
       height: 100%;
     }
 
+    #stats_elem
+    {
+      display: none;
+    }
   </style>
 
   <script>
@@ -218,8 +223,25 @@
 
     function On_Choose_Trend(event)
     {
-      alert("yo");
       event.stopPropagation();
+      Util.Clr(stats_elem);
+
+      // add movement panels for each tech
+      for (c=0; c<this.child_queries.length; c++)
+      {
+        const stat_elem = document.createElement("query-stats");
+        stat_elem.db = db;
+        stat_elem.query = this.child_queries[c];
+
+        stats_elem.append(stat_elem);
+      }
+
+      // add rankings
+
+      // add pie chart
+
+      Util.Hide(curve_chart);
+      Util.Show(stats_elem);
     }
 
     function On_Choose_Chart(event)
@@ -249,6 +271,9 @@
       query_menu.Uncheck();
       this.querySelector("#checkbox").checked = true;
       Draw_Chart_By_Query_Id(db, this.query.id, true, false);
+
+      Util.Hide(stats_elem);
+      Util.Show(curve_chart);
     }
 
     async function On_Relative_Click()
@@ -620,6 +645,11 @@
         <p id="signature">- <a href="https://www.linkedin.com/in/esteban-ramirez-91a66b14/">Esteban (Steven) Ramirez</a>
         <a href="https://www.linkedin.com/in/esteban-ramirez-91a66b14" target="_blank"><img src="/images/In-2C-14px.png" /></a>
         <a href="http://ramirezsystems.blogspot.com" target="_blank"><img id="blogger" src="/images/icons8-blogger-18.png" /></a></p>
+      </div>
+
+      <div id="stats_elem">
+        <div>Rankings</div>
+        <div>Pie Chart</div>
       </div>
 
     </app-header-layout>
