fix panel display bug

--- a/public/index.html
+++ b/public/index.html
@@ -278,6 +278,9 @@
       {
         this.checked = true;
       }
+
+      Util.Hide(stats_elem);
+      Util.Show(curve_chart);
     }
 
     function On_Show_Chart(event)
