fix panel visibility bug

--- a/public/index.html
+++ b/public/index.html
@@ -210,6 +210,7 @@
       var toggle_elem, menu_elem;
 
       db = new Db();
+      db.trace_hits = false;
 
       menu_elem = document.createElement("query-menu-item");
       menu_elem.id = "query_menu";
