--- a/public/admin.html
+++ b/public/admin.html
@@ -145,7 +145,7 @@
       db.write_db_cache = true;
       
       await Refresh_Query_Cache();
-      //await Refresh_Trend_Cache();
+      await Refresh_Trend_Cache();
 
       document.getElementById("cache_ok").show();
     }
